# Flow-Dictation

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  formatting.rs  history.rs  lib.rs  transcription.rs  wav.rs
src/components/: AudioSourceToggle.tsx  FloatingPanel.tsx  FormatSelector.tsx  HistoryView.tsx  PillView.tsx  RecordingIndicator.tsx  SettingsView.tsx  StatusBar.tsx  TranscriptDisplay.tsx
